[API] Added endpoints to load external datasets
